--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xiangnanscu/modelsql",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "modelsql",
   "main": "src/modelsql.mjs",
   "scripts": {
@@ -30,12 +30,12 @@
   },
   "homepage": "https://github.com/xiangnanscu/modelsql#readme",
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "jest": "^28.1.2",
-    "vite": "^2.9.9",
-    "vue": "^3.2.25"
+    "@vitejs/plugin-vue": "^3.0.1",
+    "jest": "^28.1.3",
+    "vite": "^3.0.2",
+    "vue": "^3.2.37"
   },
   "dependencies": {
-    "@xiangnanscu/sql": "^0.5.0"
+    "@xiangnanscu/sql": "latest"
   }
 }
