--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@xiangnanscu/modelsql",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "modelsql",
   "main": "src/modelsql.mjs",
   "scripts": {
@@ -13,6 +13,7 @@
     "rr": "npm run replace && npm run rename",
     "replace": "find .  -type d \\( -name .git -o -name node_modules \\) -prune -o  -type f  -exec  sed -i s/modelsql/modelmodelsql/g {} \\;",
     "rename": "rename s/modelsql/modelmodelsql/g src/*",
+    "u": "ncu -u && npm install",
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
   },
   "repository": {
@@ -36,6 +37,6 @@
     "vue": "^3.2.37"
   },
   "dependencies": {
-    "@xiangnanscu/sql": "latest"
+    "@xiangnanscu/sql": "^0.6.0"
   }
 }
