--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "prerelease": "npm --no-git-tag-version version minor",
+    "prerelease": "npm run u && npm --no-git-tag-version version minor",
     "release": "push_option=release npm run push",
     "push": "git add . && git commit -am \"${msg:-push}\" && git push --push-option=${push_option:-nothing}",
     "rr": "npm run replace && npm run rename",
-    "replace": "find .  -type d \\( -name .git -o -name node_modules \\) -prune -o  -type f  -exec  sed -i s/modelsql/modelmodelsql/g {} \\;",
-    "rename": "rename s/modelsql/modelmodelsql/g src/*",
+    "replace": "find .  -type d \\( -name .git -o -name node_modules \\) -prune -o  -type f  -exec  sed -i s/modelsql/modelsql/g {} \\;",
+    "rename": "rename s/modelsql/modelsql/g src/*",
     "u": "ncu -u && npm install",
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)"
   },
